# webdog

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
site/: config.yaml
site/pages/: index.md
site/pages/docs/: commands.md  config.md  extras.md  index.md  pages.md  resources.md  styling.md  templates.md  wd-assumptions.md  webdog-html.md
site/resources/blog/: introducing-webdog.md  test-post.md
site/root/: CNAME
site/sass/: index.scss
site/templates/: base.tera  docs.tera
site/templates/blog/: blog.tera  list.tera
src/: builder.rs  extras.rs  frontmatter.rs  lib.rs  link_list.rs  main.rs  resource.rs  serving.rs  util.rs
src/embedded/default_site/pages/: index.md
src/embedded/default_site/sass/: index.scss
src/embedded/default_site/templates/: base.tera
src/embedded/js/: refresh_websocket.js  webdog.js
src/embedded/resource-template/: list.tera  resource.tera
