[package]
description = "static site generator fit for a dog"
edition = "2024"
homepage = "https://webdog.zyl.gay"
license = "AGPL-3.0-or-later"
name = "webdog"
readme = "README.md"
repository = "https://github.com/zyllian/webdog"
version = "0.1.2"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6", optional = true }
extract-frontmatter = "4"
eyre = "0.6"
fs_extra = "1.2"
futures = { version = "0.3", optional = true }
grass = { version = "0.13", default-features = false }
hotwatch = { version = "0.5", optional = true }
html5ever = "0.31"
include_dir = "0.7"
itertools = "0.14"
kuchikiki = "0.8.8-speedreader"
lol_html = "2"
minifier = { version = "0.3", features = ["html"] }
percent-encoding = { version = "2", optional = true }
pulldown-cmark = { version = "0.13", default-features = false, features = [
  "simd",
  "html",
] }
rayon = "1"
rss = { version = "2", features = ["validation"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
syntect = "5"
tera = "1"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
], optional = true }
url = { version = "2", features = ["serde"] }
walkdir = "2"
warp = { version = "0.3", optional = true }

[features]
default = ["serve", "color-eyre"]
serve = ["futures", "hotwatch", "percent-encoding", "tokio", "warp"]
